# Folio

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  INDEX.md  README.md  ROADMAP.md  alembic.ini  app.py  db.py  electron-builder.yml  folio-backend.spec  index.md  models.py  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
ADR/: 001-frontend-framework.md  006-orm.md  index.md
alembic/versions/: 0551937a982a_initial_holdings_table.py
backend/: db.py  ibkr_client.py  main.py  models.py  option_prices.py  prices.py  run_server.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0551937a982a_initial_holdings_table.py  29215b1e161f_rename_qty_to_contracts_add_option_type.py  541d011acc68_add_direction_to_option_trades.py  (+1 more)
backend/api/: holdings.py  options_trades.py
docs/: architecture.md  column-reference.md  data-model.md  ibkr-tws-setup.md  user-guide.md
docs/adr/: 001-frontend-framework.md  002-data-storage.md  003-price-data-source.md  004-auto-refresh-strategy.md  005-save-strategy.md  007-frontend-framework-revisit.md  008-adopt-shadcn-tailwind.md  009-electron-desktop-packaging.md  010-options-pricing-source.md  011-ibkr-options-pricing.md  012-option-trade-direction.md  013-per-item-crud-and-field-validation.md
electron/: main.js  preload.js
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  format.test.ts  format.ts  main.tsx  types.ts
tests/: conftest.py  test_api_holdings.py  test_api_options_trades.py  test_ibkr_client.py
(+27 files in other folders)
